# FLAIR

./: .gitignore  README.md
docker/airl/: Dockerfile  Dockerfile.ros2_light  Dockerfile.stereolabs  Dockerfile.vicon
fast_adaptation/: docker_compose_flair.yaml  docker_compose_l1.yaml  docker_compose_lqr.yaml  docker_compose_rl.yaml  super_client_profile.xml
fast_adaptation/analysis/: FLAIR_released_plots.ipynb
fast_adaptation/config/: .gitignore  server_profile.xml
fast_adaptation/example/: flair_example.py  path_config.py  plot_map_elites.py  train_map_elites.py
fast_adaptation/src/FLAIR_msg/: CMakeLists.txt  package.xml
fast_adaptation/src/FLAIR_msg/msg/: Adapted.msg  FLAIRTwist.msg  FunctionalityControllerControl.msg  GPData.msg  GPMap.msg  HumanControl.msg  Latency.msg  Perturbation.msg  SystemControl.msg  VnImu.msg
fast_adaptation/src/flair/: package.xml  setup.cfg  setup.py
fast_adaptation/src/flair/flair/: adaptation.py  adaptation_config.py  adaptation_config_l1.py  adaptation_config_rl.py  adaptation_l1.py  adaptation_lqr.py  adaptation_rl.py  bridge.py  filter.py  perturbation.py  vicon.py
fast_adaptation/src/flair/functionality_controller/: adaptive_gp_no_state_fast.py  adaptive_gp_state_fast.py  data_collection.py  datapoint.py  dataset_fifo.py  dataset_grid.py  dataset_simple.py  fixed_dataset_grid.py  functionality_controller.py  functionality_controller_l1.py  functionality_controller_lqr.py  functionality_controller_rl.py  functionality_controller_utils.py  lqr_controller.py  residual_rl_td3.py
fast_adaptation/src/flair/functionality_controller/gp/: gpjax_map.py  gpjax_map_v2.py
singularity/: build_final_image  requirements.txt  singularity.def  start_container
(+47 files in other folders)
